project/manifests/middleware.yaml
# Strip prefix /api
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: backend-stripprefix
spec:
  stripPrefix:
    prefixes: 
      - /api
