project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: todo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: todo-backend
          image: BACKEND
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
          volumeMounts:
            - mountPath: /usr/src/app/cache
              name: image-cache
          resources:
            limits:
              cpu: "150m"
              memory: "200Mi"
        - name: todo-frontend
          image: FRONTEND
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
