project/manifests/project-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: todo-ns
spec:
  selector:
    app: postgres-app
  ports:
  - port: 5432
    name: web
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: todo-ns
spec:
  selector:
    matchLabels:
      app: postgres-app
  serviceName: postgres-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
      - name: postgres
        imagePullPolicy: Always
        image: postgres:14.1
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
