project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-svc
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
  - port: 2345
    name: frontend
    protocol: TCP
    targetPort: 3000
  - port: 2346
    name: backend
    protocol: TCP
    targetPort: 8080
