project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: todo-ns
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: todo-ns-backend-stripprefix@kubernetescrd
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-server-svc
            port: 
              number: 2345
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: web-server-svc
            port:
              number: 2346
